--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -29,6 +29,8 @@ jobs:
         uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
         with:
          scan-type: 'fs'
+         format: 'sarif'
+         output: 'trivy-results.sarif'
          security-checks: 'vuln,config'
 
          
