--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -13,7 +13,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+ run-trivy-action:
     permissions:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
@@ -40,4 +40,23 @@ jobs:
         with:
            name: trivy report
            path: ${{github.workspace}}/dependency-results.sbom.json
+           
+ run-trivy-on-sbom:
+      permissions:
+       contents: read # for actions/checkout to fetch code
+       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      name: trivy-sbom
+      runs-on: ubuntu-latest
+      steps:
+       - name: Checkout code
+         uses: actions/checkout@v3
+       - run: docker run --rm -v /tmp:/tmp -v $(pwd):/app:rw -t ghcr.io/cyclonedx/cdxgen -r ${{github.workspace}} -o /bom.json
+       - uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
+         with:
+          scan-type: 'fs'
+          format: 'json'
+          output: 'bom.json'
+          image-ref: '.'
+          github-pat: ${{ secrets.GITHUB_TOKEN }}
 
