--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -55,8 +55,13 @@ jobs:
        - uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
          with:
           scan-type: 'fs'
-          format: 'json'
-          output: 'bom.json'
-          image-ref: '.'
-          github-pat: ${{ secrets.GITHUB_TOKEN }}
+          format: 'cyclonedx'
+          output: 'bom2.json'
 
+
+         
+       - name: upload rep2
+         uses: actions/upload-artifact@master
+         with:
+           name: trivy report
+           path: ${{github.workspace}}/bo*.json
