--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -64,4 +64,10 @@ jobs:
          uses: actions/upload-artifact@master
          with:
            name: trivy report
-           path: ${{github.workspace}}/bo*.json
+           path: ${{github.workspace}}/bom.json
+
+       - name: upload rep2
+         uses: actions/upload-artifact@master
+         with:
+           name: trivy report2
+           path: ${{github.workspace}}/bom2.json
