--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -51,7 +51,7 @@ jobs:
       steps:
        - name: Checkout code
          uses: actions/checkout@v3
-       - run: docker run --rm -v /tmp:/tmp -v $(pwd):/app:rw -t ghcr.io/cyclonedx/cdxgen -r ${{github.workspace}} -o /bom.json
+       - run: docker run --rm -v /tmp:/tmp -v $(pwd):/app:rw -t ghcr.io/cyclonedx/cdxgen -r /app -o /app/bom.json && ls
        - uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
          with:
           scan-type: 'fs'
@@ -64,7 +64,7 @@ jobs:
          uses: actions/upload-artifact@master
          with:
            name: trivy report
-           path: ${{github.workspace}}/bom.json
+           path: ${{github.workspace}}/app/bom.json
 
        - name: upload rep2
          uses: actions/upload-artifact@master
