--- a/.github/workflows/dependencycheck.yml
+++ b/.github/workflows/dependencycheck.yml
@@ -13,6 +13,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/dependency-check/data
+        # Ensure the key is unique and based on something that changes when the cache should be rebuilt
+          key: ${{ runner.os }}-dependency-check-${{ hashFiles('*.db', '*.json') }}
+          restore-keys: |
+             ${{ runner.os }}-dependency-check-
       - name: Depcheck Action - SCA
         uses: dependency-check/Dependency-Check_Action@main
         id: Depcheck
@@ -25,15 +33,8 @@ jobs:
             --enableRetired
             --enableExperimental
             --nvdApiKey $NVD_API_KEY
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.dependency-check/data/
-        # Ensure the key is unique and based on something that changes when the cache should be rebuilt
-          key: ${{ runner.os }}-dependency-check-${{ hashFiles('*.db', '*.json') }}
-          restore-keys: |
-             ${{ runner.os }}-dependency-check-
-      - run: ls ~/.dependency-check/data/*
+
+      - run: ls dependency-check/data/ && ls
       - name: Upload results - SCA
         uses: actions/upload-artifact@master
         with:
