--- a/.github/workflows/dependencycheck.yml
+++ b/.github/workflows/dependencycheck.yml
@@ -30,7 +30,7 @@ jobs:
           args: >
             --enableRetired
             --enableExperimental
-            --nvdApiKey $NVD_API_KEY
+       #     --nvdApiKey $NVD_API_KEY
 
       - run: ls .dependency-check
       - run: ls
