--- a/.github/workflows/dependencycheck.yml
+++ b/.github/workflows/dependencycheck.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: |
-            ~/.dependency-check/data
+            ./dependency-check/data
         # Ensure the key is unique and based on something that changes when the cache should be rebuilt
           key: ${{ runner.os }}-dependency-check-${{ hashFiles('*.db', '*.json') }}
           restore-keys: |
