--- a/.github/workflows/depcheck_CONTAINER.yml
+++ b/.github/workflows/depcheck_CONTAINER.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: |
-            ./src/dependency-check/data
+            ~/.cache/dependency-check
         # Ensure the key is unique and based on something that changes when the cache should be rebuilt
           key: ${{ runner.os }}-dependency-check-${{ hashFiles('*.db', '*.json') }}
           restore-keys: |
