--- a/.github/workflows/depcheck_CONTAINER_2.yml
+++ b/.github/workflows/depcheck_CONTAINER_2.yml
@@ -11,8 +11,8 @@ jobs:
       volumes: 
        - ${{ github.workspace }}:/src
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+ #     - name: Checkout code
+   #     uses: actions/checkout@v4
 
 #      - uses: actions/cache@v3
   #      with:
