--- a/.github/workflows/caller_SONAR.yml
+++ b/.github/workflows/caller_SONAR.yml
@@ -9,5 +9,4 @@ jobs:
       uses: TestingOrgCS/WorkflowsRepo/.github/workflows/central_SONAR.yml@main
       secrets:
        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-       GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-       CI: true
+       GH_TOKEN: ${{ secrets.GH_TOKEN }}
