--- a/.github/workflows/caller_SONAR.yml
+++ b/.github/workflows/caller_SONAR.yml
@@ -7,6 +7,4 @@ on:
 jobs:
    SAST_caller:
       uses: TestingOrgCS/WorkflowsRepo/.github/workflows/central_SONAR.yml@main
-      secrets:
-       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      secrets: inherit
