--- a/.github/workflows/legitify.yml
+++ b/.github/workflows/legitify.yml
@@ -13,7 +13,11 @@ jobs:
         with:
           github_token: ${{ secrets.PAT_FOR_LEGITIFY }}
           upload_code_scanning: false
-          extra: --output-format sarif --output-file test.sarif --scorecard no --org github.repository_owner
+          extra: |
+            --output-format sarif 
+            --output-file test.sarif 
+            --scorecard no 
+            --org ${{ github.repository_owner }}
 
       - name: Legitify Action
         run: cat test.sarif
