--- a/.github/workflows/legitify.yml
+++ b/.github/workflows/legitify.yml
@@ -14,9 +14,10 @@ jobs:
           github_token: ${{ secrets.PAT_FOR_LEGITIFY }}
           upload_code_scanning: false
           extra: |
-            --output-format sarif 
-            --output-file test.sarif 
-            --scorecard no 
+            --output-format,
+            sarif 
+            --output-file,
+            test.sarif 
             --org ${{ github.repository_owner }}
 
       - name: Legitify Action
