--- a/.github/workflows/legitify.yml
+++ b/.github/workflows/legitify.yml
@@ -14,7 +14,7 @@ jobs:
           github_token: ${{ secrets.PAT_FOR_LEGITIFY }}
           upload_code_scanning: false
           extra: |
-            -- org Tech-it-or-live-it-Secure-CICD 
+            '-- org Tech-it-or-live-it-Secure-CICD'
 
       - name: Legitify Action
         run: cat test.sarif
