--- a/.github/workflows/legitify.yml
+++ b/.github/workflows/legitify.yml
@@ -2,14 +2,19 @@ name: Legitify Analyze
 on:
     workflow_dispatch:
     schedule:
-      - cron: '0 11 * * 1-5'
+    - cron: '0 6 * * 1'
 
 jobs:
   analyze:
     runs-on: ubuntu-latest
     steps:
-      - name: Legitify - Download & Install
-        run: |
+     - uses: actions/cache@v4
+       with:
+        path: |
+          legitify
+        key: ${{ runner.os }}-legitify-1.0.7
+     - name: Legitify Scan - CLI
+       run: |
           if [[ -f "legitify" ]]; then
              ./legitify -h
           else
